OutcomeTargetLinkRenderer: List.of + isEmpty()
Signed-off-by: pizzi80 <paolo@given2.com>